Added more SQL Data and more service methods

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:h2:mem:socialdb
+spring.datasource.initialization-mode=always
+spring.datasource.data=classpath:data.sql
