--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:h2:mem:socialdb
 spring.datasource.initialization-mode=always
 spring.datasource.data=classpath:data.sql
+
+#spring.security.oauth2.client.registration.github.clientId=Iv1.028e583d5a771060
+#spring.security.oauth2.client.registration.github.clientSecret=2a7ccfe03e13f91bd3cf113b60009a1158c584a1
+#First Secret key#d76136c0edd6321ef9132534b97c22fde04a50da
